1.增加歌词和歌单详情 2.今天好不开心~
